# sandpiper

./: .gitignore  Allele frequencies.xlsx  CHANGELOG.md  Cargo.toml  Expected polymorphisms.xlsx  README.md  Results.xlsx  TODO.md  To do.md  redneck_all.txt  sandpiper_all.txt  sandpiper_output
benches/: sample_heterozygosity.rs
computed/: Expected polymorphisms 2.xlsx  Expected polymorphisms.xlsx  Fixed selection.pptx  sandpiper_poly_all.txt
computed/sigmoid rate/: rates.pptx
examples/checking/: main.rs
examples/checking_selection/: README.md  Results.xlsx  main.rs
examples/cluster/: cluster.d  individual.rs  log_output  log_output_10500  log_output_10500_2  log_output_11500  log_output_12500  log_output_2500  log_output_3500  log_output_4500  log_output_5500  log_output_5500_2  log_output_6500  log_output_7500  log_output_8500  log_output_9500  main.rs  main.rs.save  run_script.sh  sandpiper_output
examples/cluster2/: all_redneck_poly.csv  all_sandpiper_poly.csv  log_output  main.rs  run_script.sh
examples/expected_poly/: collective.rs  individual.rs  main.rs
examples/expected_polymorphisms/: density.gnu  dominance_function.gnu  main.rs  selection_density.gnu
examples/extracting_data/: main.rs
examples/genetic_freq/: Allele frequencies.xlsx  Book1.xlsx  genetic_frequency_density.gnu  main.rs
examples/mixture/: README.md  main.rs
examples/ploting_results/: ploting_results.gnu  redneck.txt
examples/skew_normal/: main.rs
src/: constants.rs  distribution.rs  error.rs  lib.rs  main.rs  parameters.rs  root_finding.rs  statistic.rs
(+41 files in other folders)
