[package]
name = "sandpiper"
version = "0.1.0"
authors = ["Raimundo Saona <rasa200@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.12.0"
rand = "0.7" # {path = "../rand_beta"}
rand_distr = "0.2" # {path = "../rand_beta/rand_distr"}
noisy_float = "0.1.12"
preexplorer = {path = "../preexplorer"}
num-traits = "0.2.11"
quadrature = "0.1.2"
getset = "0.1.1"
anyhow = "1.0.28"
itertools = "0.9.0"

[dev-dependencies]
rayon = "1.3.0"
test-case = "1.0.0"
ndarray = "0.13.1"
average = "0.10.4"
