[package]
name = "sandpiper"
version = "0.1.1"
authors = ["Raimundo Saona <rasa200@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.12.0"
rand = "0.7"
rand_distr = "0.2"
noisy_float = "0.1.12"
preexplorer = "0.3.5"
num-traits = "0.2.11"
quadrature = "0.1.2"
getset = "0.1.1"
anyhow = "1.0.28"
itertools = "0.9.0"
indicatif = "0.16"
chrono = "0.4.13"
average = "0.10.4"
rayon = "1.3.0"
ordered-float = "2.2.0"
quantiles = "0.7.1"

[dev-dependencies]
test-case = "1.1.0"
ndarray = "0.13.1"
rand_pcg = "0.2.1"
clap = "2.33.3"
csv = "1.1.5"



[[bench]]
name = "sample_heterozygosity"
harness = false
